Java-CTP/Java2CTP/src/quantbox/QuantBoxLibrary.java

	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnErrRtnOrderInsert extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInputOrderField pInputOrder, CThostFtdcRspInfoField pRspInfo);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspError extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pApi, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspOrderAction extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInputOrderActionField pInputOrderAction, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspOrderInsert extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInputOrderField pInputOrder, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryDepthMarketData extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcDepthMarketDataField pDepthMarketData, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryInstrument extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInstrumentField pInstrument, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryInstrumentCommissionRate extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInstrumentCommissionRateField pInstrumentCommissionRate, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryInstrumentMarginRate extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInstrumentMarginRateField pInstrumentMarginRate, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryInvestorPosition extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInvestorPositionField pInvestorPosition, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryInvestorPositionDetail extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInvestorPositionDetailField pInvestorPositionDetail, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryOrder extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcOrderField pOrder, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryTrade extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcTradeField pTrade, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRspQryTradingAccount extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcTradingAccountField pTradingAccount, CThostFtdcRspInfoField pRspInfo, int nRequestID, byte bIsLast);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRtnDepthMarketData extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pMdUserApi, CThostFtdcDepthMarketDataField pDepthMarketData);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRtnInstrumentStatus extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcInstrumentStatusField pInstrumentStatus);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRtnOrder extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcOrderField pOrder);
	};
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	/// <i>native declaration : QuantBox.C2CTP.h</i>
	public interface fnOnRtnTrade extends StdCallLibrary.StdCallCallback {
		void apply(Pointer pTraderApi, CThostFtdcTradeField pTrade);
	};
	/**
	 * \u521b\u5efa\u63a5\u6536\u6d88\u606f\u961f\u5217\uff0c\u652f\u6301\u54cd\u5e94\u884c\u60c5\u548c\u4ea4\u6613<br>
	 * Original signature : <code>void* CTP_CreateMsgQueue()</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:45</i>
	 */
	Pointer CTP_CreateMsgQueue();
	/**
	 * \u5411\u6d88\u606f\u961f\u5217\u6ce8\u518c\u56de\u8c03\u51fd\u6570<br>
	 * Original signature : <code>void CTP_RegOnConnect(void*, fnOnConnect)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:48</i>
	 */
	void CTP_RegOnConnect(Pointer pMsgQueue, QuantBoxLibrary.fnOnConnect pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnDisconnect(void*, fnOnDisconnect)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:49</i>
	 */
	void CTP_RegOnDisconnect(Pointer pMsgQueue, QuantBoxLibrary.fnOnDisconnect pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnErrRtnOrderAction(void*, fnOnErrRtnOrderAction)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:50</i>
	 */
	void CTP_RegOnErrRtnOrderAction(Pointer pMsgQueue, QuantBoxLibrary.fnOnErrRtnOrderAction pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnErrRtnOrderInsert(void*, fnOnErrRtnOrderInsert)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:51</i>
	 */
	void CTP_RegOnErrRtnOrderInsert(Pointer pMsgQueue, QuantBoxLibrary.fnOnErrRtnOrderInsert pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspError(void*, fnOnRspError)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:52</i>
	 */
	void CTP_RegOnRspError(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspError pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspOrderAction(void*, fnOnRspOrderAction)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:53</i>
	 */
	void CTP_RegOnRspOrderAction(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspOrderAction pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspOrderInsert(void*, fnOnRspOrderInsert)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:54</i>
	 */
	void CTP_RegOnRspOrderInsert(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspOrderInsert pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryDepthMarketData(void*, fnOnRspQryDepthMarketData)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:55</i>
	 */
	void CTP_RegOnRspQryDepthMarketData(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryDepthMarketData pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryInstrument(void*, fnOnRspQryInstrument)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:56</i>
	 */
	void CTP_RegOnRspQryInstrument(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryInstrument pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryInstrumentCommissionRate(void*, fnOnRspQryInstrumentCommissionRate)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:57</i>
	 */
	void CTP_RegOnRspQryInstrumentCommissionRate(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryInstrumentCommissionRate pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryInstrumentMarginRate(void*, fnOnRspQryInstrumentMarginRate)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:58</i>
	 */
	void CTP_RegOnRspQryInstrumentMarginRate(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryInstrumentMarginRate pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryInvestorPosition(void*, fnOnRspQryInvestorPosition)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:59</i>
	 */
	void CTP_RegOnRspQryInvestorPosition(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryInvestorPosition pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryInvestorPositionDetail(void*, fnOnRspQryInvestorPositionDetail)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:60</i>
	 */
	void CTP_RegOnRspQryInvestorPositionDetail(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryInvestorPositionDetail pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryOrder(void*, fnOnRspQryOrder)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:61</i>
	 */
	void CTP_RegOnRspQryOrder(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryOrder pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryTrade(void*, fnOnRspQryTrade)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:62</i>
	 */
	void CTP_RegOnRspQryTrade(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryTrade pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRspQryTradingAccount(void*, fnOnRspQryTradingAccount)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:63</i>
	 */
	void CTP_RegOnRspQryTradingAccount(Pointer pMsgQueue, QuantBoxLibrary.fnOnRspQryTradingAccount pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRtnDepthMarketData(void*, fnOnRtnDepthMarketData)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:64</i>
	 */
	void CTP_RegOnRtnDepthMarketData(Pointer pMsgQueue, QuantBoxLibrary.fnOnRtnDepthMarketData pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRtnInstrumentStatus(void*, fnOnRtnInstrumentStatus)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:65</i>
	 */
	void CTP_RegOnRtnInstrumentStatus(Pointer pMsgQueue, QuantBoxLibrary.fnOnRtnInstrumentStatus pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRtnOrder(void*, fnOnRtnOrder)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:66</i>
	 */
	void CTP_RegOnRtnOrder(Pointer pMsgQueue, QuantBoxLibrary.fnOnRtnOrder pCallback);
	/**
	 * Original signature : <code>void CTP_RegOnRtnTrade(void*, fnOnRtnTrade)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:67</i>
	 */
	void CTP_RegOnRtnTrade(Pointer pMsgQueue, QuantBoxLibrary.fnOnRtnTrade pCallback);
	/**
	 * \u91ca\u653e\u6d88\u606f\u961f\u5217<br>
	 * Original signature : <code>void CTP_ReleaseMsgQueue(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:70</i>
	 */
	void CTP_ReleaseMsgQueue(Pointer pMsgQueue);
	/**
	 * \u6e05\u7a7a\u6d88\u606f\u961f\u5217\u5185\u5bb9<br>
	 * Original signature : <code>void CTP_ClearMsgQueue(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:72</i>
	 */
	void CTP_ClearMsgQueue(Pointer pMsgQueue);
	/**
	 * \u5904\u7406\u6d88\u606f\u961f\u5217\u7b2c\u4e00\u6761\u8bb0\u5f55<br>
	 * Original signature : <code>bool CTP_ProcessMsgQueue(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:75</i>
	 */
	byte CTP_ProcessMsgQueue(Pointer pMsgQueue);
	/**
	 * \u5f00\u542f\u961f\u5217\u56de\u8c03\u4e3b\u52a8\u63a8\u9001\u7ebf\u7a0b<br>
	 * Original signature : <code>void CTP_StartMsgQueue(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:77</i>
	 */
	void CTP_StartMsgQueue(Pointer pMsgQueue);
